--- a/pom.xml
+++ b/pom.xml
@@ -18,22 +18,32 @@
 	</properties>
 	<dependencies>
 
+		<!--	 WEB Dependency	-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+                  <!--	 JPA Dependency	-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+                 <!-- JDBC Dependency	-->
 	<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
 		<scope>runtime</scope>
 		</dependency>
 
+                <!--	Security Dependency	-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<!--	 TEST Dependency	-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
